--- a/style.css
+++ b/style.css
@@ -1,5 +1,20 @@
 @charset "UTF-8"; 
 
+@font-face {
+    font-family: "Proxima Nova Regular";
+    src: url(assets/ProximaNova-Regular.woff) format('woff');
+}
+
+@font-face {
+    font-family: "Roboto Regular";
+    src: url(assets/Roboto-Regular.woff) format('woff');
+}
+
+@font-face {
+    font-family: "Roboto Light";
+    src: url(assets/Roboto-Light.woff) format('woff');
+}
+
 body {
     font-family: Open Sans;
     font-weight: normal;
