--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
 @charset "UTF-8"; 
 
+/* @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap'); */
+
 @font-face {
     font-family: "Proxima Nova Regular";
-    src: url(assets/ProximaNova-Regular.woff) format('woff');
+    font-display: swap;
+    src: local('ProximaNova'), local('Proxima Nova'), url(./assets/ProximaNova-Regular.woff) format('woff');
 }
 
 @font-face {
-    font-family: "Roboto Regular";
-    src: url(assets/Roboto-Regular.woff) format('woff');
+    font-family: "Roboto"; /*   */
+    font-display: swap;
+    src: local('Roboto'), local('Roboto-Regular'),
+         url(./assets/Roboto-Regular.woff) format('woff'),
+         url(./assets/Roboto-Regular.otf) format('opentype');
 }
 
 @font-face {
     font-family: "Roboto Light";
-    src: url(assets/Roboto-Light.woff) format('woff');
+    font-display: swap;
+    src: local('Roboto Light'), local('Roboto-Light'),
+         url(./assets/Roboto-Light.woff) format('woff'),
+         url(./assets/Roboto-Light.otf) format('opentype');
 }
 
 body {
